--- a/requirements.txt
+++ b/requirements.txt
@@ -31,8 +31,7 @@ diagnostic-analysis==1.9.7
 diagnostic-common-diagnostics==1.9.7
 diagnostic-updater==1.9.7
 distro==1.5.0
-docutils==0.17.1
-drone-wrapper==1.3.7
+
 dynamic-reconfigure==1.6.3
 dynamixel-sdk==3.7.31
 empy==3.3.4
@@ -88,7 +87,7 @@ pluggy==0.13.1
 protobuf==3.15.8
 psutil==5.8.0
 py==1.10.0
-py-trees==0.6.9
+py-trees
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.20
@@ -117,7 +116,6 @@ redis==3.5.3
 requests==2.25.1
 requests-oauthlib==1.3.0
 resource-retriever==1.12.6
-rl-coach==1.0.1
 rosbag==1.14.10
 rosboost-cfg==1.14.9
 rosclean==1.14.9
@@ -134,9 +132,6 @@ rosnode==1.14.10
 rosparam==1.14.10
 rospkg==1.3.0
 rospy==1.14.10
-rosserial-arduino==0.8.0
-rosserial-client==0.8.0
-rosserial-python==0.8.0
 rosservice==1.14.10
 rostest==1.14.10
 rostopic==1.14.10
@@ -146,36 +141,25 @@ rqt-action==0.4.9
 rqt-bag==0.5.1
 rqt-bag-plugins==0.5.1
 rqt-console==0.4.9
-rqt-controller-manager==0.18.3
 rqt-dep==0.4.9
-rqt-drone-teleop==1.3.7
-rqt-ez-publisher==0.5.0
 rqt-graph==0.4.11
-rqt-ground-robot-teleop==1.3.7
 rqt-gui==0.5.2
 rqt-gui-py==0.5.2
 rqt-image-view==0.4.16
-rqt-joint-trajectory-controller==0.17.2
-rqt-joint-trajectory-plot==0.0.5
 rqt-launch==0.4.8
-rqt-launchtree==0.2.0
 rqt-logger-level==0.4.8
 rqt-moveit==0.5.7
 rqt-msg==0.4.8
-rqt-multiplot==0.0.10
 rqt-nav-view==0.5.7
-rqt-play-motion-builder==1.0.2
 rqt-plot==0.4.13
 rqt-pose-view==0.5.8
 rqt-publisher==0.4.8
 rqt-py-common==0.5.2
 rqt-py-console==0.4.8
-rqt-py-trees==0.3.1
 rqt-reconfigure==0.5.3
 rqt-robot-dashboard==0.5.7
 rqt-robot-monitor==0.5.13
 rqt-robot-steering==0.5.10
-rqt-rotors==2.2.3
 rqt-runtime-monitor==0.5.7
 rqt-rviz==0.6.0
 rqt-service-caller==0.4.8
@@ -184,11 +168,9 @@ rqt-srv==0.4.8
 rqt-tf-tree==0.6.0
 rqt-top==0.4.8
 rqt-topic==0.4.11
-rqt-virtual-joy==0.1.2
 rqt-web==0.4.8
 rsa==4.7.2
 rviz==1.13.16
-sagemaker-rl-agent==0.0.1
 scikit-image==0.17.2
 scipy==1.5.4
 seaborn==0.8.1
@@ -213,10 +195,8 @@ tifffile==2020.9.3
 toml==0.10.2
 topic-tools==1.14.10
 tornado==6.1
-turtlebot3-example==1.2.5
 turtlebot3-teleop==1.2.5
 typing-extensions==3.7.4.3
-unique-id==1.0.6
 urdfdom-py==0.4.5
 urllib3==1.26.4
 websocket-client==0.58.0
